# bot-gpt

./: .dockerignore  .gitignore  Makefile  README.md  architecture.md  docker-compose.yml  test.html
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: llm_client.py  main.py
backend/app/api/: api.py  deps.py
backend/app/api/v1/endpoints/: chats.py  documents.py
backend/app/core/: celery_app.py  config.py  database.py
backend/app/crud/: chat.py  document.py
backend/app/db/: base.py  base_class.py  models.py
backend/app/middlewares/: logging.py
backend/app/prompts/: chat.yaml
backend/app/schemas/: chat.py  document.py
backend/app/services/: llm_graph.py  prompts.py  rag_service.py  socketio_manager.py
backend/app/tests/: conftest.py  test_api.py
backend/app/workers/: tasks.py
frontend/: ARCHITECTURE.md  QUICKSTART.md  README.md  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  LoadingSpinner.tsx  Toast.tsx  index.ts
frontend/src/config/: index.ts
frontend/src/features/auth/: LoginPage.tsx
frontend/src/features/conversation/: ConversationWindow.tsx
frontend/src/features/dashboard/: DashboardPage.tsx  Sidebar.tsx
frontend/src/features/profile/: ProfilePage.tsx
frontend/src/features/updates/: UpdatesProvider.tsx
frontend/src/hooks/: useConversationPreload.ts
frontend/src/services/: socket.ts
frontend/src/services/api/: client.ts  conversations.ts  documents.ts  index.ts
frontend/src/services/auth/: mockAuth.ts
frontend/src/state/atoms/: auth.ts  conversations.ts  index.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
