[project]
name = "bot-gpt-backend"
version = "0.1.0"
description = "Conversational AI backend with RAG capabilities using FastAPI, LangChain, and OpenAI."
authors = [
    {name = "Rishav Anand",email = "77602579+rishav-goswami@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
