[project]
name = "bot-gpt-backend"
version = "0.1.0"
description = "Conversational AI backend with RAG capabilities using FastAPI, LangChain, and OpenAI."
authors = [
    { name = "Rishav Anand", email = "77602579+rishav-goswami@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "python-socketio (>=5.16.0,<6.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-google-genai (>=4.1.3,<5.0.0)",
    "langchain-groq (>=1.1.1,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langchain (>=1.2.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langgraph (>=1.0.6,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "pymupdf (>=1.26.7,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
asyncio_mode = "auto"